--- a/wp-content/themes/understrap-child/src/sass/theme/_child_theme_variables.scss
+++ b/wp-content/themes/understrap-child/src/sass/theme/_child_theme_variables.scss
@@ -3,8 +3,8 @@
 // Just copy a variable from src/sass/assets/bootstrap5/_variables.scss, paste it here and edit the value.
 
 /// Color overrides
-$primary: #004f86 !default; // your “blue”
-$secondary: #f5c841 !default; // your “yellow”
-$success: #8a5a2d !default; // your “brown”
+$primary: #004f86 !default; // Whited “blue”
+$secondary: #f5c841 !default; // Whited “yellow”
+$success: #8a5a2d !default; // Whited “brown”
 $light: #ffffff !default; // white
 $dark: #000000 !default; // black
