Override Bootstrap colors and rebuild CSS via sass build

--- a/wp-content/themes/understrap-child/src/sass/theme/_child_theme_variables.scss
+++ b/wp-content/themes/understrap-child/src/sass/theme/_child_theme_variables.scss
@@ -8,3 +8,5 @@ $secondary: #f5c841 !default; // Whited “yellow”
 $success: #8a5a2d !default; // Whited “brown”
 $light: #ffffff !default; // white
 $dark: #000000 !default; // black
+
+/* --- SASS-WATCH-TEST --- */
