--- a/wp-content/themes/understrap-child/src/sass/theme/_child_theme_variables.scss
+++ b/wp-content/themes/understrap-child/src/sass/theme/_child_theme_variables.scss
@@ -8,7 +8,7 @@ $secondary: #f5c841 !default; // Whited “yellow”
 $success: #8a5a2d !default; // Whited “brown”
 $light: #ffffff !default; // white
 $dark: #000000 !default; // black
-$font-family-sans-serif: "Inter", system-ui, sans-serif;
+$font-family-sans-serif: "Inter", system-ui, sans-serif; //fonts
 $headings-font-weight: 700;
 
 /* --- SASS-WATCH-TEST --- */
