revmoed template-parts structure for block patterns

--- a/wp-content/themes/understrap-child/css/child-theme.css
+++ b/wp-content/themes/understrap-child/css/child-theme.css
@@ -15400,4 +15400,18 @@ section.section--tight {
   padding: 3rem 0;
 }
 
+section.section--narrow {
+  padding: 0;
+}
+
+/* Hide entry title on front page */
+.home .entry-header {
+  display: none;
+}
+
+.wp-block-group.section-pad {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+}
+
 /*# sourceMappingURL=child-theme.css.map */
