--- a/wp-content/themes/understrap-child/css/custom-editor-style.css
+++ b/wp-content/themes/understrap-child/css/custom-editor-style.css
@@ -468,9 +468,9 @@ progress {
   --bs-border-radius-2xl: 2rem;
   --bs-border-radius-pill: 50rem;
   --bs-link-color: #3055c3;
-  --bs-link-hover-color: #26449c;
+  --bs-link-hover-color: rgb(38.4, 68, 156);
   --bs-code-color: #d63384;
-  --bs-highlight-bg: #fff3cd;
+  --bs-highlight-bg: rgb(255, 242.6, 205.4);
 }
 
 .table, .wp-block-table table {
@@ -551,13 +551,13 @@ progress {
 
 .table-primary {
   --bs-table-color: #000;
-  --bs-table-bg: #d6ddf3;
-  --bs-table-border-color: #c1c7db;
-  --bs-table-striped-bg: #cbd2e7;
+  --bs-table-bg: rgb(213.6, 221, 243);
+  --bs-table-border-color: rgb(192.24, 198.9, 218.7);
+  --bs-table-striped-bg: rgb(202.92, 209.95, 230.85);
   --bs-table-striped-color: #000;
-  --bs-table-active-bg: #c1c7db;
+  --bs-table-active-bg: rgb(192.24, 198.9, 218.7);
   --bs-table-active-color: #000;
-  --bs-table-hover-bg: #c6cce1;
+  --bs-table-hover-bg: rgb(197.58, 204.425, 224.775);
   --bs-table-hover-color: #000;
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
@@ -565,13 +565,13 @@ progress {
 
 .table-secondary {
   --bs-table-color: #000;
-  --bs-table-bg: #fff5d4;
-  --bs-table-border-color: #e6ddbf;
-  --bs-table-striped-bg: #f2e9c9;
+  --bs-table-bg: rgb(255, 244.6, 212.4);
+  --bs-table-border-color: rgb(229.5, 220.14, 191.16);
+  --bs-table-striped-bg: rgb(242.25, 232.37, 201.78);
   --bs-table-striped-color: #000;
-  --bs-table-active-bg: #e6ddbf;
+  --bs-table-active-bg: rgb(229.5, 220.14, 191.16);
   --bs-table-active-color: #000;
-  --bs-table-hover-bg: #ece3c4;
+  --bs-table-hover-bg: rgb(235.875, 226.255, 196.47);
   --bs-table-hover-color: #000;
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
@@ -579,13 +579,13 @@ progress {
 
 .table-success {
   --bs-table-color: #000;
-  --bs-table-bg: #d1e7dd;
-  --bs-table-border-color: #bcd0c7;
-  --bs-table-striped-bg: #c7dbd2;
+  --bs-table-bg: rgb(209, 231, 220.8);
+  --bs-table-border-color: rgb(188.1, 207.9, 198.72);
+  --bs-table-striped-bg: rgb(198.55, 219.45, 209.76);
   --bs-table-striped-color: #000;
-  --bs-table-active-bg: #bcd0c7;
+  --bs-table-active-bg: rgb(188.1, 207.9, 198.72);
   --bs-table-active-color: #000;
-  --bs-table-hover-bg: #c1d6cc;
+  --bs-table-hover-bg: rgb(193.325, 213.675, 204.24);
   --bs-table-hover-color: #000;
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
@@ -593,13 +593,13 @@ progress {
 
 .table-info {
   --bs-table-color: #000;
-  --bs-table-bg: #d6ddf3;
-  --bs-table-border-color: #c1c7db;
-  --bs-table-striped-bg: #cbd2e7;
+  --bs-table-bg: rgb(213.6, 221, 243);
+  --bs-table-border-color: rgb(192.24, 198.9, 218.7);
+  --bs-table-striped-bg: rgb(202.92, 209.95, 230.85);
   --bs-table-striped-color: #000;
-  --bs-table-active-bg: #c1c7db;
+  --bs-table-active-bg: rgb(192.24, 198.9, 218.7);
   --bs-table-active-color: #000;
-  --bs-table-hover-bg: #c6cce1;
+  --bs-table-hover-bg: rgb(197.58, 204.425, 224.775);
   --bs-table-hover-color: #000;
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
@@ -607,13 +607,13 @@ progress {
 
 .table-warning {
   --bs-table-color: #000;
-  --bs-table-bg: #fff5d4;
-  --bs-table-border-color: #e6ddbf;
-  --bs-table-striped-bg: #f2e9c9;
+  --bs-table-bg: rgb(255, 244.6, 212.4);
+  --bs-table-border-color: rgb(229.5, 220.14, 191.16);
+  --bs-table-striped-bg: rgb(242.25, 232.37, 201.78);
   --bs-table-striped-color: #000;
-  --bs-table-active-bg: #e6ddbf;
+  --bs-table-active-bg: rgb(229.5, 220.14, 191.16);
   --bs-table-active-color: #000;
-  --bs-table-hover-bg: #ece3c4;
+  --bs-table-hover-bg: rgb(235.875, 226.255, 196.47);
   --bs-table-hover-color: #000;
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
@@ -621,13 +621,13 @@ progress {
 
 .table-danger {
   --bs-table-color: #000;
-  --bs-table-bg: #f8d7da;
-  --bs-table-border-color: #dfc2c4;
-  --bs-table-striped-bg: #eccccf;
+  --bs-table-bg: rgb(248, 214.6, 217.8);
+  --bs-table-border-color: rgb(223.2, 193.14, 196.02);
+  --bs-table-striped-bg: rgb(235.6, 203.87, 206.91);
   --bs-table-striped-color: #000;
-  --bs-table-active-bg: #dfc2c4;
+  --bs-table-active-bg: rgb(223.2, 193.14, 196.02);
   --bs-table-active-color: #000;
-  --bs-table-hover-bg: #e5c7ca;
+  --bs-table-hover-bg: rgb(229.4, 198.505, 201.465);
   --bs-table-hover-color: #000;
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
@@ -636,12 +636,12 @@ progress {
 .table-light {
   --bs-table-color: #000;
   --bs-table-bg: #f6f6f6;
-  --bs-table-border-color: #dddddd;
-  --bs-table-striped-bg: #eaeaea;
+  --bs-table-border-color: rgb(221.4, 221.4, 221.4);
+  --bs-table-striped-bg: rgb(233.7, 233.7, 233.7);
   --bs-table-striped-color: #000;
-  --bs-table-active-bg: #dddddd;
+  --bs-table-active-bg: rgb(221.4, 221.4, 221.4);
   --bs-table-active-color: #000;
-  --bs-table-hover-bg: #e4e4e4;
+  --bs-table-hover-bg: rgb(227.55, 227.55, 227.55);
   --bs-table-hover-color: #000;
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
@@ -650,12 +650,12 @@ progress {
 .table-dark {
   --bs-table-color: #ffffff;
   --bs-table-bg: #1a2e69;
-  --bs-table-border-color: #314378;
-  --bs-table-striped-bg: #253871;
+  --bs-table-border-color: rgb(48.9, 66.9, 120);
+  --bs-table-striped-bg: rgb(37.45, 56.45, 112.5);
   --bs-table-striped-color: #ffffff;
-  --bs-table-active-bg: #314378;
+  --bs-table-active-bg: rgb(48.9, 66.9, 120);
   --bs-table-active-color: #ffffff;
-  --bs-table-hover-bg: #2b3e74;
+  --bs-table-hover-bg: rgb(43.175, 61.675, 116.25);
   --bs-table-hover-color: #ffffff;
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
@@ -908,9 +908,9 @@ progress {
   --bs-border-radius-2xl: 2rem;
   --bs-border-radius-pill: 50rem;
   --bs-link-color: #3055c3;
-  --bs-link-hover-color: #26449c;
+  --bs-link-hover-color: rgb(38.4, 68, 156);
   --bs-code-color: #d63384;
-  --bs-highlight-bg: #fff3cd;
+  --bs-highlight-bg: rgb(255, 242.6, 205.4);
 }
 
 .clearfix::after {
@@ -963,56 +963,56 @@ progress {
   color: #3055c3 !important;
 }
 .link-primary:hover, .link-primary:focus {
-  color: #26449c !important;
+  color: rgb(38.4, 68, 156) !important;
 }
 
 .link-secondary {
   color: #ffcb2a !important;
 }
 .link-secondary:hover, .link-secondary:focus {
-  color: #ffd555 !important;
+  color: rgb(255, 213.4, 84.6) !important;
 }
 
 .link-success {
   color: #198754 !important;
 }
 .link-success:hover, .link-success:focus {
-  color: #146c43 !important;
+  color: rgb(20, 108, 67.2) !important;
 }
 
 .link-info {
   color: #3055c3 !important;
 }
 .link-info:hover, .link-info:focus {
-  color: #26449c !important;
+  color: rgb(38.4, 68, 156) !important;
 }
 
 .link-warning {
   color: #ffcb2a !important;
 }
 .link-warning:hover, .link-warning:focus {
-  color: #ffd555 !important;
+  color: rgb(255, 213.4, 84.6) !important;
 }
 
 .link-danger {
   color: #dc3545 !important;
 }
 .link-danger:hover, .link-danger:focus {
-  color: #b02a37 !important;
+  color: rgb(176, 42.4, 55.2) !important;
 }
 
 .link-light {
   color: #f6f6f6 !important;
 }
 .link-light:hover, .link-light:focus {
-  color: #f8f8f8 !important;
+  color: rgb(247.8, 247.8, 247.8) !important;
 }
 
 .link-dark {
   color: #1a2e69 !important;
 }
 .link-dark:hover, .link-dark:focus {
-  color: #152554 !important;
+  color: rgb(20.8, 36.8, 84) !important;
 }
 
 .ratio {
