commented out hte page-wrapper.

--- a/wp-content/themes/understrap-child/src/sass/assets/understrap/theme/_understrap.scss
+++ b/wp-content/themes/understrap-child/src/sass/assets/understrap/theme/_understrap.scss
@@ -3,9 +3,9 @@ body {
 }
 
 // Some basic padding for all wrappers
-.wrapper {
-  padding: $grid-gutter-width 0;
-}
+// .wrapper {
+//   padding: $grid-gutter-width 0;
+// }
 
 // Reset hero wrapper padding to 0
 #wrapper-hero {
