--- a/wp-content/themes/understrap-child/src/sass/theme/_child_theme_variables.scss
+++ b/wp-content/themes/understrap-child/src/sass/theme/_child_theme_variables.scss
@@ -1,4 +1,5 @@
 // src/sass/theme/_child_theme_variables.scss
+@import "theme/mixins/flex";
 @import "theme/mixins/fluid-type";
 @import "theme/mixins/breakpoints";
 @import "theme/mixins/container";
