chore: reorganized home php files and scss #6

--- a/wp-content/themes/understrap-child/src/sass/theme/_child_theme_variables.scss
+++ b/wp-content/themes/understrap-child/src/sass/theme/_child_theme_variables.scss
@@ -3,6 +3,7 @@
 @import "theme/mixins/fluid-type";
 @import "theme/mixins/breakpoints";
 @import "theme/mixins/container";
+@import "theme/mixins/section-spacing";
 
 // — Bootstrap overrides —
 /// Brand colors
