working on spacing overall #11

--- a/wp-content/themes/understrap-child/src/sass/theme/_child_theme_variables.scss
+++ b/wp-content/themes/understrap-child/src/sass/theme/_child_theme_variables.scss
@@ -2,6 +2,7 @@
 $spacer: 1rem !default;
 $spacer-xl: $spacer * 3 !default;
 $spacer-2: $spacer * 2 !default;
+$section-space: $spacer * 4 !default;
 
 /// Brand colors
 $primary: #3055c3 !default; // Douglas‑Whited blue
